Invalidate invite method, get invites controller
