# backend/internal/interface/api/rest/dto/response/response_server.go
@@ -43,3 +43,17 @@ type UpdateServerResponse struct {
 	IconUrl     string    `json:"iconUrl"`
 	BannerUrl   string    `json:"bannerUrl"`
 }
+
+type Invitation struct {
+	Id             uuid.UUID  `json:"id"`
+	ServerId       uuid.UUID  `json:"serverId"`
+	CreatedAt      time.Time  `json:"createdAt"`
+	ExpiresAt      *time.Time `json:"expiresAt"`
+	BypassApproval bool       `json:"bypassApproval"`
+	JoinLimit      int32      `json:"joinLimit"`
+	JoinCount      int32      `json:"joinCount"`
+}
+
+type GetServerInvitationsResponse struct {
+	Result []Invitation `json:"result"`
+}
